name:                sd
version:             0.1.0.0
synopsis:            Symbolic differentiation in Haskell
description:         Please see README.md
homepage:            https://github.com/ocramz/sd
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          zocca marco gmail
copyright:           2017 Marco Zocca
category:            Acme
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.7 && < 0.6

executable sd
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , sd

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             LibSpec.hs
  build-depends:       base
                     , sd
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/sd
